fix consoleEl horizontal scroll

--- a/style.css
+++ b/style.css
@@ -37,6 +37,10 @@ details {
   top: 0;
 }
 
+#consoleEl {
+  overflow-x: hidden;
+}
+
 body.maxCanvas svg.blocklySvg text {
   fill: white !important;
 }
